Layout fixes; draft dark mode

--- a/assets/main.css
+++ b/assets/main.css
@@ -194,3 +194,24 @@ table td { border: 1px solid #e8e8e8; }
 .highlight .vg { color: #008080; }
 .highlight .vi { color: #008080; }
 .highlight .il { color: #099; }
+
+/** Work in progress: Use `prefers-color-scheme` to show a dark theme */
+@media (prefers-color-scheme: dark) {
+  body {
+    font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    color: #c8e1ff;
+    background-color: #1b1f23;
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-feature-settings: "kern" 1;
+    -moz-font-feature-settings: "kern" 1;
+    -o-font-feature-settings: "kern" 1;
+    font-feature-settings: "kern" 1;
+    font-kerning: normal;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+  a:visited { color:#2a7ae2 }
+  a:hover { color:#eee;}
+  pre, code { background-color: #112; }
+}
